--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@
                 <!-- 활동 기록 (텍스트 에어리어) -->
                 <div class="glass-card activity-card slide-in-right">
                     <div class="card-header">
-                        <h3>📜 탐험 일지 (활동 기록)</h3>
+                        <h3 style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
+                            <span>📜 교훈 일지 (활동 기록)</span>
+                            <span id="log-limit-text"
+                                style="font-size: 0.9rem; color: #94a3b8; font-weight: normal;">(오늘 남은 제출 횟수:
+                                3/3)</span>
+                        </h3>
                     </div>
                     <p class="section-desc">오늘 수업 혹은 자습을 통해 얻은 역사적 지식과 깨달음을 기록하세요.</p>
 
@@ -282,6 +287,91 @@
 
                 <div style="display: flex; justify-content: center;">
                     <button id="close-level-guide-btn" class="primary-btn sm-btn" style="width: 100%;">확인했습니다</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- 7. 갤러리 상세 프로필 모달 -->
+        <div id="gallery-profile-modal" class="modal-overlay" style="display: none; z-index: 1000;">
+            <div class="glass-card modal-content slide-in-up" style="max-width: 480px; padding: 2.5rem 2rem;">
+
+                <!-- 상단 프로필 영역 -->
+                <div
+                    style="display: flex; gap: 1.5rem; align-items: center; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 1.5rem; margin-bottom: 1.5rem;">
+                    <div id="gp-img-box"
+                        style="width: 100px; height: 100px; border-radius: 20px; background: rgba(255,255,255,0.1); display: flex; align-items: center; justify-content: center; overflow: hidden; flex-shrink: 0; box-shadow: 0 4px 6px rgba(0,0,0,0.2);">
+                        <span style="font-size: 3.5rem;">👤</span>
+                    </div>
+                    <div style="flex: 1;">
+                        <h2 id="gp-id"
+                            style="margin-bottom: 0.5rem; font-size: 1.8rem; letter-spacing: 0.5px; color: #f8fafc;">학번
+                        </h2>
+                        <div class="user-badges">
+                            <span class="badge level-badge" id="gp-level"
+                                style="font-size: 0.9rem; padding: 0.4rem 0.8rem;">Lv. 1</span>
+                            <span class="badge title-badge" id="gp-title"
+                                style="font-size: 0.9rem; padding: 0.4rem 0.8rem;">칭호</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 능력치 영역 -->
+                <div class="stats-container"
+                    style="background: rgba(0,0,0,0.15); border-radius: 12px; padding: 1.2rem; border: 1px solid rgba(255,255,255,0.05); margin-bottom: 1.5rem; gap: 1rem;">
+                    <div class="stat-group">
+                        <div class="stat-label" style="font-size: 0.95rem; margin-bottom: 0.3rem;">
+                            <span class="stat-name">💪 힘 (Strength)</span>
+                            <span class="stat-val str-text" id="gp-str">0</span>
+                        </div>
+                        <div class="progress-bar" style="height: 10px;">
+                            <div class="progress-fill str-fill" id="gp-str-fill" style="width: 0%;"></div>
+                        </div>
+                    </div>
+                    <div class="stat-group">
+                        <div class="stat-label" style="font-size: 0.95rem; margin-bottom: 0.3rem;">
+                            <span class="stat-name">🧠 지력 (Intelligence)</span>
+                            <span class="stat-val int-text" id="gp-int">0</span>
+                        </div>
+                        <div class="progress-bar" style="height: 10px;">
+                            <div class="progress-fill int-fill" id="gp-int-fill" style="width: 0%;"></div>
+                        </div>
+                    </div>
+                    <div class="stat-group">
+                        <div class="stat-label" style="font-size: 0.95rem; margin-bottom: 0.3rem;">
+                            <span class="stat-name">✨ 매력 (Charisma)</span>
+                            <span class="stat-val cha-text" id="gp-cha">0</span>
+                        </div>
+                        <div class="progress-bar" style="height: 10px;">
+                            <div class="progress-fill cha-fill" id="gp-cha-fill" style="width: 0%;"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 생애 및 업적 영역 -->
+                <div style="background: rgba(255,255,255,0.03); border-radius: 12px; padding: 1.5rem;">
+                    <div style="margin-bottom: 1.5rem;">
+                        <h3
+                            style="margin-bottom: 0.6rem; font-size: 1.1rem; color: #fcd34d; display: flex; align-items: center; gap: 0.5rem;">
+                            <span style="font-size:1.2rem;">📖</span> 생애
+                        </h3>
+                        <p id="gp-life"
+                            style="color: #cbd5e1; font-size: 0.95rem; line-height: 1.7; white-space: pre-wrap;">기록 없음
+                        </p>
+                    </div>
+                    <div>
+                        <h3
+                            style="margin-bottom: 0.6rem; font-size: 1.1rem; color: #fcd34d; display: flex; align-items: center; gap: 0.5rem;">
+                            <span style="font-size:1.2rem;">🏆</span> 주요 업적
+                        </h3>
+                        <p id="gp-achievement"
+                            style="color: #cbd5e1; font-size: 0.95rem; line-height: 1.7; white-space: pre-wrap;">기록 없음
+                        </p>
+                    </div>
+                </div>
+
+                <div style="display: flex; justify-content: center; margin-top: 2rem;">
+                    <button id="close-gp-modal-btn" class="primary-btn sm-btn"
+                        style="width: 100%; font-size: 1rem; padding: 1rem;">확인했습니다</button>
                 </div>
             </div>
         </div>
