--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="dashboard-screen" class="screen">
             <header class="dash-header glass-card">
                 <div class="user-info">
-                    <div class="avatar-sm">🛡️</div>
+                    <div class="avatar-sm" id="display-highest-stat-icon">🛡️</div>
                     <div>
                         <h2><span id="display-id" class="highlight-text"></span> 님의 프로필</h2>
                         <div class="user-badges" style="margin-bottom: 0.8rem;">
